--- a/web2/assets/config.json
+++ b/web2/assets/config.json
@@ -2,5 +2,5 @@
   "app": "mits-web-ctf",
   "version": "2.0",
   "debug": false,
-  "flag": "CTF{network_tab_exposes_hidden_requests}"
+  "flag": "CTF{qu!3t_tr@ff!c}"
 }
